--- a/livart/.classpath
+++ b/livart/.classpath
@@ -13,7 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/dev64/eclipse/lombok.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ojdbc11.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/oraclepki.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/orai18n.jar"/>
@@ -21,5 +20,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/osdt_core.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ucp.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/xdb6.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lombok.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
