--- a/livart/.classpath
+++ b/livart/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ucp.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/xdb6.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lombok.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/cos.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
